# smartOrderingAgent

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  run.py
agent/: langchain_assitant.py  milvus_data_sync.py  redis.demo.py  redis_data_sync.py
agent/prompts/: system_prompt.txt
api/: main.py
ui/: start.bat
