[project]
name = "smartorderingagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-huggingface>=1.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "pymilvus>=3.0.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
]
